<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_double_divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_info_edit_psd_tv"
        android:textSize="@dimen/text_large_size" />

    <EditText
        android:id="@+id/edit_info_psd_et0"
        style="@style/edit_info_et_style"
        android:hint="@string/edit_info_edit_old_psd_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_info_psd_et1"
        style="@style/edit_info_et_style"
        android:hint="@string/edit_info_edit_new_psd_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_info_psd_et2"
        style="@style/edit_info_et_style"
        android:hint="@string/edit_info_edit_new_psd_confirm_hint"
        android:inputType="textPassword" />


</LinearLayout>