<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_general" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="4.5">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.5">

                <EditText
                    android:id="@+id/login_et0"
                    style="@style/login_et_style"
                    android:layout_gravity="center_vertical|bottom"
                    android:focusable="true"
                    android:hint="@string/login_usn_hint_et"
                    android:inputType="number" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.5">

                <EditText
                    android:id="@+id/login_et1"
                    style="@style/login_et_style"
                    android:hint="@string/login_psd_hint_et"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/login_tv0"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/ic_public_eye" />

                <TextView
                    android:id="@+id/login_tv1"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_public_psd_clear" />

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_btn0"
                    style="@style/login_btn_style"
                    android:background="@drawable/login_reg_btn"
                    android:text="@string/login_register_btn" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/login_btn1"
                    style="@style/login_btn_style"
                    android:background="@drawable/login_log_btn"
                    android:text="@string/login_login_btn" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:weightSum="2">

            <TextView
                android:id="@+id/login_tv3"
                style="@style/login_tv_style"
                android:gravity="start|center_vertical" />

            <TextView
                android:id="@+id/login_tv2"
                style="@style/login_tv_style"
                android:gravity="end|center_vertical"
                android:text="@string/login_forget_psd_tv" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>